# dataflow

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: DataflowConfig.cmake.in  FetchVcpkg.cmake
examples/: CMakeLists.txt  ex_1.cpp  ex_2.cpp
include/dataflow/: builder.hpp  dataflow.hpp  graph.hpp  node.hpp  runtime.hpp
include/dataflow/integrations/: taskflow.hpp
src/: builder.cpp  dataflow.cpp  graph.cpp  node.cpp  runtime.cpp
tests/: CMakeLists.txt  type_safety.cpp
